# kubernexus-mono

./: .gitignore  Earthfile  go.mod  go.sum  go.work  go.work.sum
api/protos/meshes/: BUILD.bazel  Makefile  doc.go  gen.go  nexusops.pb.go  nexusops.proto  nexusops_drpc.pb.go  nexusops_grpc.pb.go
api/protos/meshes/google/api/: BUILD.bazel
api/protos/meshes/google/api/experimental/: BUILD.bazel
api/protos/meshes/google/api/servicecontrol/v1/: BUILD.bazel
api/protos/meshes/google/api/servicemanagement/v1/: BUILD.bazel
api/protos/meshes/google/appengine/legacy/: BUILD.bazel
api/protos/meshes/google/appengine/logging/v1/: BUILD.bazel
api/protos/meshes/google/appengine/v1/: BUILD.bazel
api/protos/meshes/google/assistant/embedded/v1alpha1/: BUILD.bazel
api/protos/meshes/google/bigtable/admin/cluster/v1/: BUILD.bazel
api/protos/meshes/google/bigtable/admin/v2/: BUILD.bazel
api/protos/meshes/google/bigtable/v1/: BUILD.bazel
api/protos/meshes/google/bigtable/v2/: BUILD.bazel
api/protos/meshes/google/bytestream/: BUILD.bazel
api/protos/meshes/google/cloud/audit/: BUILD.bazel
api/protos/meshes/google/cloud/billing/v1/: BUILD.bazel
api/protos/meshes/google/cloud/dataproc/v1/: BUILD.bazel
api/protos/meshes/google/cloud/functions/v1beta2/: BUILD.bazel
api/protos/meshes/google/cloud/language/v1/: BUILD.bazel
api/protos/meshes/google/cloud/language/v1beta1/: BUILD.bazel
api/protos/meshes/google/cloud/language/v1beta2/: BUILD.bazel
api/protos/meshes/google/cloud/location/: BUILD.bazel
api/protos/meshes/google/cloud/ml/v1/: BUILD.bazel
api/protos/meshes/google/cloud/ml/v1beta1/: BUILD.bazel
api/protos/meshes/google/cloud/oslogin/: BUILD.bazel
api/protos/meshes/google/cloud/oslogin/v1alpha/: BUILD.bazel
api/protos/meshes/google/cloud/oslogin/v1beta/: BUILD.bazel
api/protos/meshes/google/cloud/runtimeconfig/v1beta1/: BUILD.bazel
api/protos/meshes/google/cloud/speech/v1/: BUILD.bazel
api/protos/meshes/google/cloud/speech/v1_1beta1/: BUILD.bazel
api/protos/meshes/google/cloud/speech/v1beta1/: BUILD.bazel
api/protos/meshes/google/cloud/support/: BUILD.bazel
api/protos/meshes/google/cloud/support/v1alpha1/: BUILD.bazel
api/protos/meshes/google/cloud/videointelligence/v1/: BUILD.bazel
api/protos/meshes/google/cloud/videointelligence/v1beta1/: BUILD.bazel
api/protos/meshes/google/cloud/videointelligence/v1beta2/: BUILD.bazel
api/protos/meshes/google/cloud/vision/v1/: BUILD.bazel
api/protos/meshes/google/cloud/vision/v1p1beta1/: BUILD.bazel
api/protos/meshes/google/container/v1/: BUILD.bazel
api/protos/meshes/google/container/v1alpha1/: BUILD.bazel
api/protos/meshes/google/container/v1beta1/: BUILD.bazel
api/protos/meshes/google/datastore/admin/v1beta1/: BUILD.bazel
api/protos/meshes/google/datastore/v1/: BUILD.bazel
api/protos/meshes/google/datastore/v1beta3/: BUILD.bazel
api/protos/meshes/google/devtools/cloudbuild/v1/: BUILD.bazel
api/protos/meshes/google/devtools/clouddebugger/v2/: BUILD.bazel
api/protos/meshes/google/devtools/clouderrorreporting/v1beta1/: BUILD.bazel
api/protos/meshes/google/devtools/cloudprofiler/v2/: BUILD.bazel
api/protos/meshes/google/devtools/cloudtrace/v1/: BUILD.bazel
api/protos/meshes/google/devtools/cloudtrace/v2/: BUILD.bazel
api/protos/meshes/google/devtools/remoteexecution/v1test/: BUILD.bazel
api/protos/meshes/google/devtools/source/v1/: BUILD.bazel
api/protos/meshes/google/devtools/sourcerepo/v1/: BUILD.bazel
api/protos/meshes/google/firestore/admin/v1beta1/: BUILD.bazel
api/protos/meshes/google/firestore/v1beta1/: BUILD.bazel
api/protos/meshes/google/genomics/v1/: BUILD.bazel
api/protos/meshes/google/genomics/v1alpha2/: BUILD.bazel
api/protos/meshes/google/iam/admin/v1/: BUILD.bazel
api/protos/meshes/google/iam/v1/: BUILD.bazel
api/protos/meshes/google/iam/v1/logging/: BUILD.bazel
api/protos/meshes/google/logging/type/: BUILD.bazel
api/protos/meshes/google/logging/v2/: BUILD.bazel
api/protos/meshes/google/longrunning/: BUILD.bazel
api/protos/meshes/google/monitoring/v3/: BUILD
api/protos/meshes/google/privacy/dlp/v2beta1/: BUILD.bazel
api/protos/meshes/google/pubsub/v1/: BUILD.bazel
api/protos/meshes/google/pubsub/v1beta2/: BUILD.bazel
api/protos/meshes/google/rpc/: BUILD.bazel
api/protos/meshes/google/spanner/v1/: BUILD.bazel
api/protos/meshes/google/storagetransfer/v1/: BUILD.bazel
api/protos/meshes/google/streetview/publish/v1/: BUILD.bazel
api/protos/meshes/google/tracing/: BUILD.bazel
api/protos/meshes/google/type/: BUILD.bazel
api/protos/meshes/google/watcher/v1/: BUILD.bazel
extensions/: go.mod
extensions/nexus-istio/: BUILD.bazel  README.md  go.mod  main.go
extensions/nexus-nsm/: BUILD.bazel  README.md  go.mod  go.sum  main.go
nexus-server/: BUILD.bazel  Dockerfile  README.md  go.mod  go.sum  main_test.go
nexus-server/internal/: README.md
nexus-server/internal/domain/: BUILD.bazel  adapters.go  capabilities.go  channels.go  configurations.go  envs.go  events.go  extensions.go  handlers.go  local_provider.go  providers.go  remote_provider.go  user.go
nexus-server/internal/user/: BUILD.bazel  handler.go  provider.go  repository.go  service.go
nexusctl/: BUILD.bazel  main.go
nexusctl/cmd/: BUILD.bazel  root.go
pkg/adapter-config/: BUILD.bazel  config.go  go.mod
pkg/adapters/: BUILD.bazel  adapter.go  constants.go  operations.go  spec.go  stream.go
pkg/config/: BUILD.bazel  doc.go  kubernetes.go  types.go
pkg/config/provider/: BUILD.bazel  doc.go  inmem.go  provider.go  viper.go
pkg/errors/: BUILD.bazel  database_error.go  errors.go  grpc_error.go  stack.go
pkg/events/: BUILD.bazel  events.go
pkg/grpc_server/: BUILD.bazel  grpc_server.go
pkg/logger/: BUILD.bazel  formatter.go  gorm_database.go  hooks.go  logger.go  xorm_database.go
pkg/nexus-adapters/: BUILD.bazel  adapter.go  go.mod  go.sum
pkg/provider-config/: BUILD.bazel  doc.go  go.mod  go.sum  inmem.go  provider.go  viper.go
pkg/tracing/: BUILD.bazel  tracing.go
pkg/utils/: BUILD.bazel  marshalling.go  sort_versions.go  utils.go
(+19 files in other folders)
