load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nexus-istio_lib",
    srcs = ["main.go"],
    importpath = "github.com/nebula-aac/kubernexus-mono/extensions/nexus-istio",
    visibility = ["//visibility:private"],
    deps = ["//pkg/grpc_server"],
)

go_binary(
    name = "nexus-istio",
    embed = [":nexus-istio_lib"],
    visibility = ["//visibility:public"],
)
