load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nexus-nsm_lib",
    srcs = ["main.go"],
    importpath = "github.com/nebula-aac/kubernexus-mono/extensions/nexus-nsm",
    visibility = ["//visibility:private"],
    deps = ["//pkg/grpc_server"],
)

go_binary(
    name = "nexus-nsm",
    embed = [":nexus-nsm_lib"],
    visibility = ["//visibility:public"],
)
