load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapter-config",
    srcs = [
        "config.go",
        "doc.go",
        "kubernetes.go",
        "types.go",
    ],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/adapter-config",
    visibility = ["//visibility:public"],
)
