load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapters",
    srcs = [
        "adapter.go",
        "constants.go",
        "operations.go",
        "spec.go",
        "stream.go",
    ],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/adapters",
    visibility = ["//visibility:public"],
    deps = [
        "//api/protos/meshes",
        "//pkg/config",
        "//pkg/events",
        "//pkg/utils",
        "@com_github_cloudevents_sdk_go_v2//event",
    ],
)
