load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "errors",
    srcs = [
        "doc.go",
        "errors.go",
        "grpc_error.go",
        "stack.go",
    ],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/errors",
    visibility = ["//visibility:public"],
)
