load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "events",
    srcs = [
        "doc.go",
        "events.go",
    ],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/events",
    visibility = ["//visibility:public"],
    deps = ["@com_github_cloudevents_sdk_go_v2//:sdk-go"],
)
