load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc_server",
    srcs = ["grpc_server.go"],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/grpc_server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/protos/meshes",
        "//pkg/errors",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/recovery:go_default_library",
        "@io_galaxymesh_git_pkg//tracing:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:go_default_library",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//sdk/trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)
