load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc_server",
    srcs = ["grpc_server.go"],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/grpc_server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/protos/meshes",
        "//pkg/errors",
        "//pkg/tracing",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/recovery",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)
