load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "nexus-adapters",
    srcs = [
        "adapter.go",
        "constants.go",
        "operations.go",
        "spec.go",
        "stream.go",
    ],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/nexus-adapters",
    visibility = ["//visibility:public"],
    deps = [
        "//api/protos/meshes",
        "//pkg/adapter-config",
        "//pkg/events",
        "//pkg/nexuslogger",
        "//pkg/utils",
        "@com_github_cloudevents_sdk_go_v2//event",
    ],
)
