load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tracing",
    srcs = ["tracing.go"],
    importpath = "github.com/nebula-aac/kubernexus-mono/pkg/tracing",
    visibility = ["//visibility:public"],
    deps = [
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//semconv/v1.17.0:v1_17_0",
        "@io_opentelemetry_go_otel_exporters_jaeger//:jaeger",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
