load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "timeofday_proto",
    srcs = [
        "color.proto",
        "date.proto",
        "dayofweek.proto",
        "latlng.proto",
        "money.proto",
        "postal_address.proto",
        "timeofday.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:wrappers_proto"],
)

go_proto_library(
    name = "timeofday_go_proto",
    importpath = "google.golang.org/genproto/googleapis/type/timeofday",
    proto = ":timeofday_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "timeofday",
    embed = [":timeofday_go_proto"],
    importpath = "google.golang.org/genproto/googleapis/type/timeofday",
    visibility = ["//visibility:public"],
)
