load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = [
        "authorization_config.proto",
        "experimental.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/api/experimental:experimental_proto",
    ],
)

go_proto_library(
    name = "api_go_proto",
    importpath = "google.golang.org/genproto/googleapis/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:annotations_proto",
        "//google/api/experimental:authorization_config_proto",
    ],
)

go_library(
    name = "api",
    embed = [":api_go_proto"],
    importpath = "google.golang.org/genproto/googleapis/api",
    visibility = ["//visibility:public"],
)
