load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "appengine_proto",
    srcs = [
        "app_yaml.proto",
        "appengine.proto",
        "application.proto",
        "audit_data.proto",
        "deploy.proto",
        "instance.proto",
        "location.proto",
        "operation.proto",
        "service.proto",
        "version.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/appengine/v1:v1_proto",
        "//google/iam/v1:v1_proto",
        "//google/longrunning:longrunning_proto",
        "//google/type:type_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "appengine_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "google.golang.org/genproto/googleapis/appengine/v1",
    proto = ":appengine_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:annotations_proto",
        "//google/appengine/v1:app_yaml_proto",
        "//google/appengine/v1:appengine_proto",
        "//google/appengine/v1:application_proto",
        "//google/appengine/v1:deploy_proto",
        "//google/appengine/v1:instance_proto",
        "//google/appengine/v1:service_proto",
        "//google/appengine/v1:version_proto",
        "//google/iam/v1:iam_policy_proto",
        "//google/iam/v1:policy_proto",
        "//google/longrunning:operations_proto",
        "//google/type:latlng_proto",
    ],
)

go_library(
    name = "appengine",
    embed = [":appengine_go_proto"],
    importpath = "google.golang.org/genproto/googleapis/appengine/v1",
    visibility = ["//visibility:public"],
)
