load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bigtable_proto",
    srcs = [
        "bigtable.proto",
        "data.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/bigtable/v2:v2_proto",
        "//google/rpc:rpc_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "bigtable_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "google.golang.org/genproto/googleapis/bigtable/v2",
    proto = ":bigtable_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:annotations_proto",
        "//google/bigtable/v2:data_proto",
        "//google/rpc:status_proto",
    ],
)

go_library(
    name = "bigtable",
    embed = [":bigtable_go_proto"],
    importpath = "google.golang.org/genproto/googleapis/bigtable/v2",
    visibility = ["//visibility:public"],
)
