load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "common_go_proto",
    importpath = "google.golang.org/genproto/googleapis/cloud/support/common",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
    deps = ["//google/api:annotations_proto"],
)

go_library(
    name = "common",
    embed = [":common_go_proto"],
    importpath = "google.golang.org/genproto/googleapis/cloud/support/common",
    visibility = ["//visibility:public"],
)
