load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "firestore_proto",
    srcs = [
        "common.proto",
        "document.proto",
        "firestore.proto",
        "query.proto",
        "write.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "//google/firestore/v1beta1:v1beta1_proto",
        "//google/rpc:rpc_proto",
        "//google/type:type_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "firestore_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "google.golang.org/genproto/googleapis/firestore/v1beta1",
    proto = ":firestore_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:annotations_proto",
        "//google/firestore/v1beta1:common_proto",
        "//google/firestore/v1beta1:document_proto",
        "//google/firestore/v1beta1:query_proto",
        "//google/firestore/v1beta1:write_proto",
        "//google/rpc:status_proto",
        "//google/type:latlng_proto",
    ],
)

go_library(
    name = "v1beta1",
    embed = [":firestore_go_proto"],
    importpath = "google.golang.org/genproto/googleapis/firestore/v1beta1",
    visibility = ["//visibility:public"],
)
